ui: misalignment of literature result box to the checkbox fixed.

--- a/ui/src/common/components/PublicNotesList/PublicNotesList.scss
+++ b/ui/src/common/components/PublicNotesList/PublicNotesList.scss
@@ -1,3 +1,3 @@
 .__PublicNotesList__ {
-  overflow-wrap: break-word;
+  word-break: break-all;
 }
